# multilinear-toolkit

./: Cargo.toml  README.md
air/: Cargo.toml
air/src/: lib.rs  symbolic.rs
backend/: Cargo.toml
backend/src/: dense_poly.rs  eq_mle.rs  evals.rs  lib.rs  matrix.rs  mle.rs  mlef.rs  point.rs  univariate_selectors.rs  utils.rs  wrappers.rs
backend/src/mle/: mle_custom.rs  mle_group.rs  mle_group_owned.rs  mle_group_ref.rs  mle_single.rs  mle_single_owned.rs  mle_single_ref.rs  mod.rs
constraints_folder/: Cargo.toml
constraints_folder/src/: lib.rs  normal.rs  packed.rs
fiat-shamir/: Cargo.toml
fiat-shamir/src/: challenger.rs  duplex_challenger.rs  errors.rs  lib.rs  merkle_pruning.rs  prover.rs  traits.rs  transcript.rs  utils.rs  verifier.rs
fiat-shamir/tests/: grinding.rs
src/: eq_mle.rs  evals.rs  lib.rs  mle.rs  utils.rs
src/constraints_folder/: mod.rs  normal.rs
src/sumcheck/: mod.rs  prove.rs  sc_computation.rs  selectors.rs  verify.rs
sumcheck/: Cargo.toml
sumcheck/src/: cube_computation.rs  cube_sumcheck.rs  lib.rs  product_computation.rs  prove.rs  quotient_computation.rs  sc_computation.rs  selectors.rs  verify.rs
unroll_macro/: Cargo.toml
unroll_macro/src/: lib.rs
whir/: Cargo.toml
whir/src/: commit.rs  config.rs  dft.rs  lib.rs  merkle.rs  open.rs  utils.rs  verify.rs
whir/tests/: run_whir.rs
