[package]
name = "multilinear-toolkit"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["backend", "constraints_folder", "sumcheck", "air", "fiat-shamir"]

[workspace.dependencies]
p3-util = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-field = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-matrix = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-koala-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-symmetric = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-poseidon2 = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }

rayon = "*"
rand = "*"
itertools = "*"
tracing = "*"
serde  = { version = "1.0.227", features = ["derive"] }

# Local dependencies
backend = { path = "backend" }
constraints-folder = { path = "constraints_folder" }
sumcheck = { path = "sumcheck" }
air = { path = "air" }
fiat-shamir = { path = "fiat-shamir" }

[dependencies]
backend.workspace = true
constraints-folder.workspace = true
sumcheck.workspace = true
p3-field.workspace = true
p3-util.workspace = true
air.workspace = true
rayon.workspace = true
tracing.workspace = true
fiat-shamir.workspace = true