[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
p3-field.workspace = true
p3-util.workspace = true
fiat-shamir.workspace = true
itertools.workspace = true
tracing.workspace = true
rayon.workspace = true
rand.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true